Fixes #22 Add new Speaker panel is too small Disable submit on non accepted terms Current user loading broken

--- a/app/styles/devoxx.css
+++ b/app/styles/devoxx.css
@@ -293,6 +293,10 @@ div.selector.ng-invalid {
     width: 800px;
 }
 
+.modal.speaker {
+    width: 800px;
+}
+
 a {
     cursor: pointer;
 }
